[package]
name = "PHASEXave"
version = "1.5.8"
edition = "2021"
authors = ["Stanislav Mikhailov <xavetar@proton.me>"]
build = "build.rs"
license = "MIT AND Apache-2.0"
license-file = "LICENSE-Anti-Virus"
description = "Fast, clear and simple interface for calculating date, week day and time in Julian, Gregorian calendar."
repository = "https://github.com/xavetar/PHASEXave"
keywords = ["date", "time", "calendar", "julian", "gregorian", "rata-die", "sakamoto", "xavetar", "week", "day"]
categories = ["date-and-time"]
include = ["*.rs", "src/", "LICENSE", "Cargo.toml"]
exclude = ["res/", "compact", ".*", ".DS_Store", "debug/", "target/", "Cargo.lock", "**/*.rs.bk", "*.pdb", ".AppleDouble", ".LSOverride",
    "Icon", "._*", ".DocumentRevisions-V100", ".fseventsd", ".Spotlight-V100", ".TemporaryItems", ".Trashes",
    ".VolumeIcon.icns", ".com.apple.timemachine.donotpresent", ".AppleDB", ".AppleDesktop", "Network Trash Folder",
    "Temporary Items", ".apdisk", ".env", ".gitignore", ".git", ".idea"]

# Features
[features]
default = []

platform_specific_functions_unix = ["dep:libc"]
platform_specific_functions_darwin = ["dep:mach"]
platform_specific_functions_windows = ["dep:winapi"]

# Dependencies
[dependencies]

[target.'cfg(target_vendor = "apple")'.dependencies]
mach = { version = "0.3.2", optional = true, default-features = false }

[target.'cfg(all(not(target_vendor = "apple"), target_family = "unix"))'.dependencies]
libc = { version = "0.2.149", optional = true, default-features = false }

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["profileapi", "ntdef", "winnt"], optional = true, default-features = false }

# Profiles
[profile.dev]
lto = "off"
opt-level = 0

[profile.release]
lto = "fat"
opt-level = 3
