# Workspace
[workspace]

members = [
    "api",
    "tools/calendar-cli",
]

default-members = [
    "api",
    "tools/calendar-cli",
]

resolver="2"

# Package
[workspace.package]
authors = ["Stanislav Mikhailov <xavetar@proton.me>"]
edition = "2021"
version = "1.7.3"
rust-version = "1.70"
license = "MIT AND Apache-2.0"
license-file = "LICENSE-Anti-Virus"
repository = "https://github.com/xavetar/PHASEXave"
description = "Date and time toolkit"
keywords = ["date", "time", "calendar", "julian", "gregorian"]
categories = ["date-and-time"]
include = ["src/", "Cargo.toml", "LICENSE-Anti-Virus", "LICENSE-MIT", "LICENSE-Apache"]
exclude = ["res/", "compact/", ".*", ".DS_Store", "debug/", "target/", "Cargo.lock", "**/*.rs.bk", "*.pdb", ".AppleDouble", ".LSOverride",
    "Icon", "._*", ".DocumentRevisions-V100", ".fseventsd", ".Spotlight-V100", ".TemporaryItems", ".Trashes",
    ".VolumeIcon.icns", ".com.apple.timemachine.donotpresent", ".AppleDB", ".AppleDesktop", "Network Trash Folder",
    "Temporary Items", ".apdisk", ".env", ".gitignore", ".git", ".idea", ".vscode"]

# Dependencies
[workspace.dependencies]
PHASEXave = { version = "=1.7.3", path = "api", default-features = false }

# Profiles
[profile.dev]
lto = "off"
opt-level = 0
panic = "abort"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"