# Workspace
[workspace]

members = [
    "api",
    "tools/calendar-cli", "tools/date-cli"
]

default-members = [
    "api",
    "tools/calendar-cli", "tools/date-cli"
]

resolver="2"

# Package
[workspace.package]
authors = ["Stanislav Mikhailov <xavetar@proton.me>"]
edition = "2021"
version = "1.8.1"
rust-version = "1.67.0"
license-file = "LICENSE"
repository = "https://github.com/xavetar/PHASEXave"
description = "Date and time library"
include = ["src/", "Cross.toml", "Cargo.toml", "LICENSE"]
exclude = ["res/", "compact/", ".*", ".DS_Store", "debug/", "target/", "Cargo.lock", "**/*.rs.bk", "*.pdb", ".AppleDouble", ".LSOverride",
    "Icon", "._*", ".DocumentRevisions-V100", ".fseventsd", ".Spotlight-V100", ".TemporaryItems", ".Trashes",
    ".VolumeIcon.icns", ".com.apple.timemachine.donotpresent", ".AppleDB", ".AppleDesktop", "Network Trash Folder",
    "Temporary Items", ".apdisk", ".env", ".gitignore", ".git", ".idea", ".vscode"]

# Dependencies
[workspace.dependencies]
PHASEXave = { version = "=1.8.1", path = "api", default-features = false }

# Profiles
[profile.dev]
lto = "off"
debug = true
strip = false
opt-level = 0
panic = "abort"
incremental = false
#codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = "fat"
strip = true
debug = false
opt-level = 3
panic = "abort"
incremental = false
#codegen-units = 256
overflow-checks = true
debug-assertions = false
