# Package
[package]
name = "date-cli"
authors = ["Stanislav Mikhailov <xavetar@proton.me>"]
publish = true
version = "1.0.2"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Fast, clear and simple CLI tool for view date from CLI for Solar, Julian, Gregorian calendar."
readme = "README.md"
repository.workspace = true
keywords = ["date-and-time", "cli", "solar", "julian", "gregorian"]
categories = ["date-and-time"]
include.workspace = true
exclude.workspace = true

# Binary
[[bin]]
name = "date-cli"
path = "src/main.rs"

# Features
[features]
default = []

# Dependencies
[dependencies]

[target.'cfg(target_vendor = "apple")'.dependencies]
PHASEXave = { version = "1.8.2", features = ["platform_specific_functions_darwin"] }

[target.'cfg(all(not(target_vendor = "apple"), target_family = "unix"))'.dependencies]
PHASEXave = { version = "1.8.2", features = ["platform_specific_functions_unix"] }

[target.'cfg(target_family = "windows")'.dependencies]
PHASEXave = { version = "1.8.2", features = ["platform_specific_functions_windows"] }
